force-app/main/default/src/objects/echosign_dev1__Field_Template__c/echosign_dev1__Field_Template__c.object-meta.xml
<CustomObject>
    <customHelpPage>echosign_dev1__EchoSignUserGuide</customHelpPage>
    <label>Map Data into Agreement Field</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Field Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Data into Agreement Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>