force-app/main/default/src/objects/echosign_dev1__Field_Template__c/fields/echosign_dev1__Constant_Value__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Constant_Value__c</fullName>
    <description>Input a value for the target field.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Input a value for the target field.</inlineHelpText>
    <label>Target Field Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>